--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "rust-analyzer.linkedProjects": [
+        "./example-fastly-full/Cargo.toml",
         "./example-fastly-rust/Cargo.toml"
     ]
 }
